{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 64,
  "lineage": "e3024da8-874c-0a8e-a6c6-4893cb6b8e11",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-043bbc01a161b6818",
            "arn": "arn:aws:ec2:eu-west-3:131353868670:instance/i-0c4b05f957bd61b15",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c4b05f957bd61b15",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0feb56059c3cad5c1",
            "private_dns": "ip-10-0-0-52.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.52",
            "public_dns": "ec2-35-180-18-131.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.180.18.131",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04e63df1b242261b4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00c1165fc3f729416",
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0178ee7438775251f"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-043bbc01a161b6818",
            "arn": "arn:aws:ec2:eu-west-3:131353868670:instance/i-087d9fad6993b5004",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-087d9fad6993b5004",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00ac9377b923d649e",
            "private_dns": "ip-10-0-1-76.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.76",
            "public_dns": "ec2-13-38-20-44.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.38.20.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-026aa716fec7ec91c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-093911c37e87d060b",
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0178ee7438775251f"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131353868670:internet-gateway/igw-042538f015ca8eb26",
            "id": "igw-042538f015ca8eb26",
            "owner_id": "131353868670",
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "vpc_id": "vpc-0e2f86fd00d8372f6"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:131353868670:loadbalancer/app/globo-web-alb/4bb38549898f0de8",
            "arn_suffix": "app/globo-web-alb/4bb38549898f0de8",
            "desync_mitigation_mode": "defensive",
            "dns_name": "globo-web-alb-1730585826.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:131353868670:loadbalancer/app/globo-web-alb/4bb38549898f0de8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "globo-web-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02392ccca74c5f5f2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00c1165fc3f729416"
              },
              {
                "subnet_id": "subnet-093911c37e87d060b"
              }
            ],
            "subnets": [
              "subnet-00c1165fc3f729416",
              "subnet-093911c37e87d060b"
            ],
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "vpc_id": "vpc-0e2f86fd00d8372f6",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:131353868670:listener/app/globo-web-alb/4bb38549898f0de8/f2594896c3c73abb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:131353868670:targetgroup/nginx-alb-t/0ed7d841e1d50853",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:131353868670:listener/app/globo-web-alb/4bb38549898f0de8/f2594896c3c73abb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:131353868670:loadbalancer/app/globo-web-alb/4bb38549898f0de8",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nginx",
            "aws_lb_target_group.nginx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:131353868670:targetgroup/nginx-alb-t/0ed7d841e1d50853",
            "arn_suffix": "targetgroup/nginx-alb-t/0ed7d841e1d50853",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:131353868670:targetgroup/nginx-alb-t/0ed7d841e1d50853",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nginx-alb-t",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e2f86fd00d8372f6"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginx1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-3:131353868670:targetgroup/nginx-alb-t/0ed7d841e1d50853-20230421090957230700000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:131353868670:targetgroup/nginx-alb-t/0ed7d841e1d50853",
            "target_id": "i-0c4b05f957bd61b15"
          },
          "dependencies": [
            "aws_instance.nginx1",
            "aws_lb_target_group.nginx",
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginx2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-3:131353868670:targetgroup/nginx-alb-t/0ed7d841e1d50853-20230421090936137100000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:131353868670:targetgroup/nginx-alb-t/0ed7d841e1d50853",
            "target_id": "i-087d9fad6993b5004"
          },
          "dependencies": [
            "aws_instance.nginx2",
            "aws_lb_target_group.nginx",
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131353868670:route-table/rtb-02cfbfc983d578640",
            "id": "rtb-02cfbfc983d578640",
            "owner_id": "131353868670",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-042538f015ca8eb26",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e2f86fd00d8372f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080baa398fe780545",
            "route_table_id": "rtb-02cfbfc983d578640",
            "subnet_id": "subnet-00c1165fc3f729416"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080baa398fe780545",
            "route_table_id": "rtb-02cfbfc983d578640",
            "subnet_id": "subnet-00c1165fc3f729416"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131353868670:security-group/sg-02392ccca74c5f5f2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02392ccca74c5f5f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_alb_sg",
            "name_prefix": "",
            "owner_id": "131353868670",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e2f86fd00d8372f6"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ingress"
              }
            ]
          ],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131353868670:security-group/sg-0178ee7438775251f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0178ee7438775251f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_sg",
            "name_prefix": "",
            "owner_id": "131353868670",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e2f86fd00d8372f6"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ingress"
              }
            ]
          ],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131353868670:subnet/subnet-00c1165fc3f729416",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c1165fc3f729416",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "131353868670",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "vpc_id": "vpc-0e2f86fd00d8372f6"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131353868670:subnet/subnet-093911c37e87d060b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-093911c37e87d060b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "131353868670",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "vpc_id": "vpc-0e2f86fd00d8372f6"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131353868670:vpc/vpc-0b2286449df785dde",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04ee85d0036a2cbb3",
            "default_route_table_id": "rtb-0102363dd6af884d0",
            "default_security_group_id": "sg-09c296390b31e5923",
            "dhcp_options_id": "dopt-0ea0b3cb93b77f480",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b2286449df785dde",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0102363dd6af884d0",
            "owner_id": "131353868670"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "cidr_block"
              }
            ]
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131353868670:vpc/vpc-0e2f86fd00d8372f6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00cc193ea2e830890",
            "default_route_table_id": "rtb-07ef28c4655b90ff9",
            "default_security_group_id": "sg-06b363af73ecb7e75",
            "dhcp_options_id": "dopt-0ea0b3cb93b77f480",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e2f86fd00d8372f6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07ef28c4655b90ff9",
            "owner_id": "131353868670",
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            }
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "cidr_block"
              }
            ]
          ]
        }
      ]
    }
  ]
}